--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   </section>
 
   <section id="servizi">
-    <h2>I Nostri Servizi</h2>
+    <h2>Qualche api semplice</h2>
     <div class="servizi-grid">
       <div class="servizio" id="meteo">
         <h3>Meteo in tempo reale</h3>
@@ -206,6 +206,7 @@
       </div>
     </div>
   </section>
+  
 
   <section id="contatti">
     <h2>Contatti</h2>
